# SparEinKasse

./: .gitignore  Extension_Wcf_to_Grpc.md  Grpc_From_Copy_to_Autogeneration.md  MSBuild_Target_Explained.md  README.md  UpgradeLog.htm  Wix-Setup-Guide.md  WpfApp-1.sln  WpfApp-SSKA.sln  rootCSV.py
Backup/: WpfApp-1.sln
Backup/SimpleSecurity/: SimpleSecurity.csproj
Backup/WpfApplication1/: App.xaml.cs  Window1.xaml  Window1.xaml.cs  WindowActivation.xaml  WindowActivation.xaml.cs  WindowFieldsDictionary.xaml.cs  WindowFilters.xaml  WindowProgrBar.xaml  WindowProgrBar.xaml.cs  WpfApplication1.csproj  app.config
Categorization/: Categorization.csv  MT940_Test_umsatz.csv  testOutput.csv
Categorization/Categ4CSVSparkasse/: Categ4CSVSparkasse.sln
Categorization/CategoryFormatter/: CategoryFormatter.csproj  FormatterCSVCategories.cs
Categorization/ConsTestCSV/: ConsTestCSV.sln
DataAL/: Class1.cs  DataAL.csproj  DataAccess.cs
DataAL/Properties/: AssemblyInfo.cs
FormatCSVCategories/: FormatCSVCategories.csproj  Formatter4CSVCategegories.cs
FormatCSVCategories/Properties/: AssemblyInfo.cs
SetupSSKA.Wix/: License.rtf  Package.wxs  SetupSSKA.Wix.wixproj
SetupSSKAmonitor/: SetupSSKAmonitor.vdproj
SetupSSKAmonitor/Debug/: SetupSSKAmonitor.msi
SetupSSKAmonitor/Release/: SetupSSKAmonitor.msi
SimpleSecurity/: Security.cs  SimpleSecurity.csproj
SimpleSecurity/Properties/: AssemblyInfo.cs
WpfApplication1/: App.cs  App.xaml.cs  DiagnosticLog.cs  Program.cs  RegistrationManager.cs  RuntimeLocalization.cs  Window1.xaml  Window1.xaml.cs  WindowAccount.xaml  WindowAccount.xaml.cs  WindowActivation.xaml  WindowActivation.xaml.cs  WindowFieldsDictionary.xaml  WindowFieldsDictionary.xaml.cs  WindowFilters.xaml  WindowFilters.xaml.cs  WindowProgrBar.xaml  WindowProgrBar.xaml.cs  WindowTimespanSelector.xaml  WindowTimespanSelector.xaml.cs  WindowWarning.xaml  WindowWarning.xaml.cs  WpfApplication1.csproj  WpfApplication1_TemporaryKey.pfx  app.config
WpfApplication1.Tests/: WpfApplication1.Tests.csproj
categorybars/: .gitignore  CMakeLists.txt  CMakePresets.json  categorydatareader.cpp  categorydatareader.h  how_to_debug.md  main.cpp
categorybars/qml/categorybars/: main.qml
(+74 files in other folders)
